src/test/ui/hr-subtype/hr-subtype.bound_inv_a_b_vs_bound_inv_a.nll.stderr
error[E0308]: mismatched types
  --> $DIR/hr-subtype.rs:45:13
   |
LL |               gimme::<$t1>(None::<$t2>);
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^ one type is more general than the other
...
LL | / check! { bound_inv_a_b_vs_bound_inv_a: (for<'a,'b> fn(Inv<'a>, Inv<'b>),
LL | | for<'a>    fn(Inv<'a>, Inv<'a>)) }
   | |__________________________________- in this macro invocation
   |
   = note: expected enum `Option<for<'r, 's> fn(Inv<'r>, Inv<'s>)>`
              found enum `Option<for<'r> fn(Inv<'r>, Inv<'r>)>`
   = note: this error originates in the macro `check` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/hr-subtype.rs:45:13
   |
LL |               gimme::<$t1>(None::<$t2>);
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^ one type is more general than the other
...
LL | / check! { bound_inv_a_b_vs_bound_inv_a: (for<'a,'b> fn(Inv<'a>, Inv<'b>),
LL | | for<'a>    fn(Inv<'a>, Inv<'a>)) }
   | |__________________________________- in this macro invocation
   |
   = note: expected enum `Option<for<'r, 's> fn(Inv<'r>, Inv<'s>)>`
              found enum `Option<for<'r> fn(Inv<'r>, Inv<'r>)>`
   = note: this error originates in the macro `check` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
